trying to fix BI bug on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,7 @@ body {
 
 .backgroundPhoto {
   background: url('/bruinsbackground.jpg') no-repeat center center fixed;
+  height: 100vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
