--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -3,7 +3,7 @@
   top: 0;
   width: 100%;
   height: 60px;
-  z-index: 10;
+  z-index: 50;
   background-color: rgba(0, 0, 0, 0.948);
   border-top: 1px solid #ffb81c;
   border-bottom: 1px solid #ffb81c;
